--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-pets",
+  "name": "google-dogs",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -24,6 +24,7 @@
     "@angular/pwa": "^0.6.5",
     "@angular/router": "^6.1.3",
     "@angular/service-worker": "^6.1.3",
+    "@types/sprintf-js": "^1.1.2",
     "core-js": "^2.5.4",
     "rxjs": "^6.2.2",
     "zone.js": "^0.8.26"
