--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "my-pets": {
+    "google-sheet-events-list": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -53,18 +53,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "my-pets:build"
+            "browserTarget": "google-sheet-events-list:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "my-pets:build:production"
+              "browserTarget": "google-sheet-events-list:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "my-pets:build"
+            "browserTarget": "google-sheet-events-list:build"
           }
         },
         "test": {
@@ -99,7 +99,7 @@
         }
       }
     },
-    "my-pets-e2e": {
+    "google-sheet-events-list-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -107,7 +107,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "my-pets:serve"
+            "devServerTarget": "google-sheet-events-list:serve"
           }
         },
         "lint": {
@@ -122,5 +122,5 @@
       }
     }
   },
-  "defaultProject": "my-pets"
+  "defaultProject": "google-sheet-events-list"
 }
