--- a/package.json
+++ b/package.json
@@ -11,44 +11,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.3",
-    "@angular/cdk": "^6.4.5",
-    "@angular/common": "^6.1.3",
-    "@angular/compiler": "^6.1.3",
-    "@angular/core": "^6.1.3",
-    "@angular/forms": "^6.1.3",
-    "@angular/http": "^6.1.3",
-    "@angular/material": "^6.4.5",
-    "@angular/platform-browser": "^6.1.3",
-    "@angular/platform-browser-dynamic": "^6.1.3",
+    "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/platform-server": "^7.2.15",
     "@angular/pwa": "^0.6.5",
-    "@angular/router": "^6.1.3",
-    "@angular/service-worker": "^6.1.3",
+    "@angular/router": "^7.2.15",
+    "@angular/service-worker": "^7.2.15",
     "@types/sprintf-js": "^1.1.2",
+    "ajv": "^6.10.2",
+    "angular-calendar": "^0.27.19",
+    "angular-calendar-scheduler": "^1.0.11",
+    "angular-draggable-droppable": "^4.3.2",
+    "angular-resizable-element": "^3.2.4",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "date-fns": "^2.3.0",
+    "jquery": "^1.9.1",
+    "moment": "^2.24.0",
+    "popper.js": "^1.15.0",
     "rxjs": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "~6.1.3",
-    "@angular/compiler-cli": "^6.1.3",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "~7.0.0",
+    "@angular/compiler-cli": "^7.0.0",
     "@angular/language-service": "^6.1.3",
-    "@types/jasmine": "~2.8.6",
+    "@types/jasmine": "^3.4.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^12.7.7",
     "angular-ide": "^0.9.66",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "codelyzer": "^5.1.1",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.3.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "^5.4.2",
+    "rxjs-tslint": "^0.1.7",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.9.2"
+    "tslint": "^5.20.0",
+    "typescript": "^3.1.1",
+    "webpack": "^4.41.0"
   }
 }
