--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/service-worker": "^6.1.3",
     "@types/sprintf-js": "^1.1.2",
     "core-js": "^2.5.4",
+    "ngx-order-pipe": "^2.0.4",
     "rxjs": "^6.2.2",
     "zone.js": "^0.8.26"
   },
