--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@angular/router": "^6.1.3",
     "@angular/service-worker": "^6.1.3",
     "@types/sprintf-js": "^1.1.2",
+    "angular-calendar": "^0.28.0",
     "core-js": "^2.5.4",
+    "date-fns": "^2.7.0",
     "ngx-order-pipe": "^2.0.4",
     "rxjs": "^6.2.2",
     "zone.js": "^0.8.26"
