--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@angular/pwa": "^0.6.5",
     "@angular/router": "^6.1.3",
     "@angular/service-worker": "^6.1.3",
+    "bootstrap-css-only": "^4.3.1",
     "@types/sprintf-js": "^1.1.2",
     "angular-calendar": "^0.28.0",
     "core-js": "^2.5.4",
     "date-fns": "^2.7.0",
+    "flatpickr": "^4.6.3",
+    "font-awesome": "^4.7.0",
+    "highlightjs-loader": "^0.2.3",
     "ngx-order-pipe": "^2.0.4",
+    "ngx-perfect-scrollbar": "^8.0.0",
     "rxjs": "^6.2.2",
     "zone.js": "^0.8.26"
   },
