--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@angular/compiler": "^8.2.14",
     "@angular/core": "^8.2.14",
     "@angular/forms": "^8.2.14",
-    "@angular/http": "^6.1.3",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/pwa": "^0.6.5",
     "@angular/router": "^8.2.14",
     "@angular/service-worker": "^8.2.14",
@@ -27,6 +27,7 @@
     "ajv": "^6.10.2",
     "angular-calendar": "^0.28.0",
     "bootstrap-css-only": "^4.3.1",
+    "braces": "^2.3.2",
     "core-js": "^2.5.4",
     "date-fns": "^2.7.0",
     "flatpickr": "^4.6.3",
