--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "angular-calendar": "^0.28.2",
     "bootstrap-css-only": "^4.3.1",
     "braces": "^2.3.2",
-    "core-js": "^2.5.4",
-    "date-fns": "^2.7.0",
+    "core-js": "^2.6.11",
+    "date-fns": "^2.8.1",
     "flatpickr": "^4.6.3",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.16.2",
     "ngx-order-pipe": "^2.0.4",
     "ngx-perfect-scrollbar": "^8.0.0",
-    "rxjs": "^6.2.2",
+    "rxjs": "^6.5.3",
     "rxjs-tslint": "^0.1.7",
-    "serialize-javascript": "^2.1.1",
+    "serialize-javascript": "^2.1.2",
     "sprintf-js": "^1.1.2",
     "tar-fs": "^2.0.0",
     "zone.js": "^0.9.1"
@@ -48,7 +48,7 @@
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "angular-ide": "^0.9.70",
     "codelyzer": "^5.2.0",
@@ -62,6 +62,6 @@
     "protractor": "^5.4.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "^3.4.5"
+    "typescript": "^3.7.3"
   }
 }
