--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "braces": "^2.3.2",
     "core-js": "^2.6.11",
     "date-fns": "^2.8.1",
+    "eslint": "^6.7.2",
     "flatpickr": "^4.6.3",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.16.2",
@@ -62,6 +63,6 @@
     "protractor": "^5.4.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "^3.7.3"
+    "typescript": "^3.5.3"
   }
 }
