--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@angular/service-worker": "^8.2.14",
     "@types/sprintf-js": "^1.1.2",
     "ajv": "^6.12.1",
-    "angular-calendar": "^0.28.10",
+    "angular-calendar": "^0.28.11",
     "bootstrap-css-only": "^4.4.1",
     "braces": "^2.3.2",
+    "calendar-utils": "^0.7.1",
     "core-js": "^2.6.11",
     "date-fns": "^2.12.0",
     "eslint": "^6.8.0",
@@ -63,6 +64,6 @@
     "protractor": "^5.4.4",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.5.3"
   }
 }
