--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^9.1.3",
     "@angular/platform-browser-dynamic": "^9.1.3",
-    "@angular/pwa": "^0.901.3",
     "@angular/router": "^9.1.3",
     "@angular/service-worker": "^9.1.3",
     "@types/sprintf-js": "^1.1.2",
@@ -41,18 +40,19 @@
     "serialize-javascript": "^2.1.2",
     "sprintf-js": "^1.1.2",
     "tar-fs": "^2.0.1",
-    "zone.js": "^0.10.3"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.3",
+    "@angular-devkit/build-angular": "~0.901.3",
     "@angular/cli": "^9.1.3",
     "@angular/compiler-cli": "^9.1.3",
     "@angular/language-service": "^9.1.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "~8.9.4",
+    "@types/node": "^12.11.1",
     "angular-ide": "^0.9.74",
-    "codelyzer": "^5.2.2",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^5.0.2",
