--- a/.settings/com.genuitec.eclipse.code.core.prefs
+++ b/.settings/com.genuitec.eclipse.code.core.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
-excludePatterns.additions=src/karma.conf.js,
+excludePatterns.additions=vendor/**src/karma.conf.js,
+excludePatterns.removals=vendor/**,
