--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "google-dogs",
+  "name": "iccm-eu-schedule",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -23,46 +23,33 @@
     "@angular/router": "^13.1.0",
     "@angular/service-worker": "^13.1.0",
     "@types/sprintf-js": "^1.1.2",
-    "ajv": "^6.12.4",
     "angular-calendar": "^0.28.16",
     "bootstrap-css-only": "^4.4.1",
-    "braces": "^2.3.2",
-    "core-js": "^2.6.11",
+    "calendar-utils": "^0.9.0",
     "date-fns": "^2.15.0",
-    "eslint": "^8.4.1",
     "flatpickr": "^4.6.6",
     "font-awesome": "^4.7.0",
-    "highlight.js": "^10.4.1",
+    "highlight.js": "^11.3.1",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "ngx-order-pipe": "^2.1.0",
-    "ngx-perfect-scrollbar": "^8.0.0",
-    "rxjs": "^6.6.2",
-    "rxjs-tslint": "^0.1.8",
-    "serialize-javascript": "^3.1.0",
+    "perfect-scrollbar": "^1.5.3",
+    "rxjs": "^7.4.0",
     "sprintf-js": "^1.1.2",
-    "tar-fs": "^2.1.0",
-    "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.1.1",
     "@angular/cli": "^13.1.1",
     "@angular/compiler-cli": "^13.1.0",
-    "@angular/language-service": "^13.1.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.12.54",
+    "@types/node": "^16.11.12",
     "angular-ide": "^0.9.9",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~6.1.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.3.5"
   }
 }
