--- a/package.json
+++ b/package.json
@@ -30,26 +30,15 @@
     "flatpickr": "^4.6.6",
     "font-awesome": "^4.7.0",
     "highlight.js": "^11.3.1",
-    "jasmine-spec-reporter": "^7.0.0",
-    "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
     "ngx-order-pipe": "^2.1.0",
     "perfect-scrollbar": "^1.5.3",
     "rxjs": "^7.4.0",
-    "sprintf-js": "^1.1.2",
-    "zone.js": "~0.11.4"
+    "sprintf-js": "^1.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.1.1",
     "@angular/cli": "^13.1.1",
-    "@angular/compiler-cli": "^13.1.0",
     "@types/node": "^16.11.12",
-    "angular-ide": "^0.9.9",
-    "karma": "~6.3.9",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "protractor": "~7.0.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.3.5"
+    "angular-ide": "^0.9.77"
   }
 }
