--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -2,7 +2,15 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+      "fs": ["./node_modules/fs-web"],
+      "https": ["./node_modules/https-browserify"],
+      "http": ["./node_modules/http-browserify"],
+      "util": ["./node_modules/util"],
+      "process": ["./node_modules/process"],
+      "child_process": ["./node_modules/child_process"],
+    }
   },
   "files": [
     "main.ts",
