--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "ng-update": "ng update @angular/core@15",
+    "ng-migrate": "ng help",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -15,6 +17,10 @@
     "@angular/compiler": "^15.1.0",
     "@angular/compiler-cli": "^15.1.0",
     "@angular/core": "^15.1.0",
+    "@angular/material": "^15.1.0",
+    "@angular/platform-browser-dynamic": "^15.1.0",
+    "@angular/router": "^15.1.0",
+    "@angular/service-worker": "^15.1.0",
     "@types/sprintf-js": "^1.1.2",
     "angular-calendar": "^0.31.0",
     "assert": "^2.0.0",
