--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>google-sheet-events-list</name>
+	<name>iccm-eu-schedule</name>
 	<comment></comment>
 	<projects>
 	</projects>
