--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "google-sheet-events-list": {
+    "iccm-eu-schedule": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -30,6 +30,11 @@
             "styles": [
               "src/styles.css"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "node_modules"
+              ]
+            },
             "scripts": [],
             "vendorChunk": true,
             "extractLicenses": false,
@@ -67,18 +72,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "google-sheet-events-list:build"
+            "browserTarget": "iccm-eu-schedule:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "google-sheet-events-list:build:production"
+              "browserTarget": "iccm-eu-schedule:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "google-sheet-events-list:build"
+            "browserTarget": "iccm-eu-schedule:build"
           }
         },
         "test": {
@@ -91,6 +96,11 @@
             "styles": [
               "src/styles.css"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "node_modules"
+              ]
+            },
             "scripts": [],
             "assets": [
               "src/favicon.ico",
@@ -101,7 +111,7 @@
         }
       }
     },
-    "google-sheet-events-list-e2e": {
+    "iccm-eu-schedule-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -109,7 +119,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "google-sheet-events-list:serve"
+            "devServerTarget": "iccm-eu-schedule:serve"
           }
         }
       }
