--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "serve": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "ng-update": "ng update @angular/core@15",
-    "ng-migrate": "ng help",
+    "update": "ng update",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -44,11 +44,13 @@
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "perfect-scrollbar": "^1.5.5",
+    "querystring": "^0.2.1",
     "rxjs": "^7.8.0",
     "sprintf-js": "^1.1.2",
     "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
-    "tls": "^0.0.1"
+    "tls": "^0.0.1",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.1",
