--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,9 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "allowedCommonJsDependencies": [
+              "lodash",
+              "sprintf-js",
+              "google-auth-library",
               "google-spreadsheet"
             ],
             "outputPath": "dist",
