--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
     "@angular/service-worker": "^17.0.8",
+    "@types/lodash-es": "^4.17.12",
     "@types/sprintf-js": "^1.1.2",
     "angular-calendar": "^0.31.0",
     "assert": "^2.0.0",
@@ -33,11 +34,13 @@
     "font-awesome": "^4.7.0",
     "fs": "^0.0.1-security",
     "fs-web": "^1.0.1",
+    "google-auth-library": "^9.4.1",
     "google-spreadsheet": "^4.1.1",
     "highlight.js": "^11.7.0",
     "http-browserify": "^1.7.0",
     "https": "^1.0.0",
     "https-browserify": "^1.0.0",
+    "lodash-es": "^4.17.21",
     "moment": "^2.29.2",
     "net": "^1.0.2",
     "ngx-order-pipe": "^2.2.0",
@@ -56,7 +59,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.9",
-    "@types/node": "^18.11.18"
+    "@types/node": "^18.11.18",
+    "angular-ide": "^0.9.77"
   },
   "browser": {
     "crypto": false,
